--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "plugins/zaw"]
 	path = plugins/zaw
-	url = git@github.com:takekiHayashida/zaw.git
+	url = git@github.com:kabachanta/zaw.git
